--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/vue-fontawesome": "^2.0.2",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11",
+    "feather-icons": "^4.28.0",
+    "vue": "^2.6.12",
     "vue-class-component": "^7.2.3",
+    "vue-feather": "^1.1.1",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
