:wrench: (TSConfig) Add allowJS and noImplicitAny parameters

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,8 @@
     "moduleResolution": "node",
     "experimentalDecorators": true,
     "skipLibCheck": true,
+    "noImplicitAny": false,
+    "allowJs": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "sourceMap": true,
